<resources>
    <string name="app_name">Kuylah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_please">Mohon masuk untuk melanjutkan</string>
    <string name="sign_in_with_google">Masuk dengan Google</string>
    <string name="home">Beranda</string>
    <string name="my_itinerary">Rencana Perjalananku</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Profil</string>
    <string name="welcome_to_jogja">Sugeng Rawuh!</string>
    <string name="jogja_is">Mulai petualanganmu sekarang, karena selalu ada sesuatu di Yogyakarta!</string>
    <string name="create_itinerary">Buat Rencana Perjalanan</string>

    <string name="ready_to_explore">Udah Siap?</string>
    <string name="start_the_journey">Rencana perjalanan kamu udah siap nih, yuk mulai jalan!</string>
    <string name="your_itinerary">Rencana perjalananmu</string>
    <string name="detail_itinerary">Detail Itinerary</string>
    <string name="itinerary_title">First trip to jogja uhuy</string>
    <string name="day">Day 1</string>
    <string name="item_title">Itinerary Title</string>
    <string name="day_price">3 D • Rp800.000.-</string>
    <string name="what_title">Apa judul rencana perjalanan kamu?</string>
    <string name="how_days">Berapa banyak hari yang kamu inginkan?</string>
    <string name="what_budget">Berapa banyak biaya yang kamu siapkan (dalam IDR)?</string>
    <string name="what_preferences">Apa saja preferensi wisata kamu?</string>
    <string name="beach">Pantai</string>
    <string name="nature">Alam</string>
    <string name="museum">Museum</string>
    <string name="cultural_and_historical">Budaya dan Sejarah</string>
    <string name="artificial">Buatan</string>
    <string name="art_gallery_and_exhibition">Seni dan Pameran</string>
    <string name="culinary">Kuliner</string>
    <string name="generate_itinerary">Buat</string>
    <string name="destination">Destination</string>
    <string name="time">11:00 AM - 12:00 AM</string>
    <string name="dot">•</string>
    <string name="day_2">Day 2</string>
    <string name="name">Sulaiman</string>
    <string name="email_title">email</string>
    <string name="name_title">nama</string>
    <string name="email_address">sulaiman@gmail.com</string>
    <string name="phone_title">phone</string>
    <string name="phone_number">018181818</string>
    <string name="btn_logout">logout</string>
    <string name="profile_desc">foto profil</string>
    <string name="home_illustration">home_illustration</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tellus molestie nunc non blandit massa enim nec dui. At imperdiet dui accumsan sit. Felis bibendum ut tristique et egestas quis. Nibh tortor id aliquet lectus proin nibh nisl condimentum. Varius quam quisque id diam.</string>
    <string name="htm_weekday">HTM Weekday:</string>
    <string name="htm_weekend">HTM Weekend:</string>
    <string name="harga">IDR 20000</string>
    <string name="tipe">Tipe Destinasi:</string>
    <string name="types">Alam, Buatan</string>
    <string name="title_destination">Kopi Klotok</string>
    <string name="empty_data">empty data</string>
    <string name="desa_wisata">Desa Wisata</string>
    <string name="wisata_air">Wisata Air</string>
    <string name="agro">Agrowisata</string>
    <string name="petualangan">Petualangan</string>
    <string name="rencana_perjalanan">Rencana Perjalanan</string>
    <string name="btn_back">Kembali</string>
    <string name="beranda">Beranda</string>
    <string name="jadwal">Jadwal</string>
    <string name="categories">Alam, Pantai, Museum</string>
</resources>