<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.home.HomeFragment">

    <TextView
        android:id="@+id/tv_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/home"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_to_jogja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/welcome_to_jogja"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_title" />

    <TextView
        android:id="@+id/tv_jogja_is"
        android:layout_width="255dp"
        android:layout_height="43dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/jogja_is"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_to_jogja" />

    <ImageView
        android:id="@+id/img_home_illustration"
        android:layout_width="263dp"
        android:layout_height="468dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/home_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_to_jogja" />

    <Button
        android:id="@+id/btn_create_itinerary"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/inter_semibold"
        android:letterSpacing="0"
        android:text="@string/create_itinerary"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />


</androidx.constraintlayout.widget.ConstraintLayout>