<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.AuthenticationActivity"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_horizontal"
            android:text="@string/sign_in_please"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_welcome" />

        <ImageView
            android:id="@+id/img_illustrator"
            android:layout_width="285dp"
            android:layout_height="400dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/signin_illustration"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/sign_in_with_google"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_illustrator"
            tools:ignore="UnusedAttribute" />

        <!--    <Button-->
        <!--        android:id="@+id/btn_sign_up"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="50dp"-->
        <!--        style="?android:attr/borderlessButtonStyle"-->
        <!--        android:layout_marginStart="32dp"-->
        <!--        android:layout_marginLeft="32dp"-->
        <!--        android:layout_marginTop="10dp"-->
        <!--        android:layout_marginEnd="32dp"-->
        <!--        android:layout_marginRight="32dp"-->
        <!--        android:background="@drawable/background_button"-->
        <!--        android:fontFamily="@font/inter_semibold"-->
        <!--        android:text="@string/sign_up"-->
        <!--        android:letterSpacing="0"-->
        <!--        android:textAllCaps="false"-->
        <!--        android:textColor="@color/white"-->
        <!--        android:textSize="16sp"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/btn_login"-->
        <!--        tools:ignore="UnusedAttribute" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
